Aggiunto le vendite e modificato le statistiche